# aegix

./: CLAUDE.md  SPEC.md  pyproject.toml
.claude/: BOOTSTRAP_FORM.md
aegix_core/: cli.py  policy.py  router.py
aegix_core/runtime/: docker_backend.py
docs/: CHANGELOG.md  DECISIONS.md
tests/: conftest.py
tests/integration/: conftest.py  test_docker_backend.py
tests/unit/: test_policy_engine.py  test_tool_router.py
